<?xml version="1.0" encoding="utf-8"?>
<resources>

       
    <string name="app_name">Muhtar Daawat</string>
    <string name="action_settings">Settings</string>
    
   
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_help">Help</string>
    <string name="share">Share</string>
 	<string name="sent_to">Sent to</string>
 	
 	<string name="activity_about">About</string>
 	<string name="activity_detail">Detail</string>
 	<string name="activity_help">Help</string>
 	<string name="activity_main">Main</string>
 
 	
 	<string name="text_bab">"Bab"</string>
 	<string name="text_doa"> "Boa"</string>
 	<string name="text_hadist"> "Hadist"</string>
 	<string name="text_riwayat"> "Riwayat"</string>
 	<string name="text_halaman"> "Halaman"</string>
 	<string name="text_arti"> "Arti"</string>
 	<string name="text_keterangan"> "Keterangan"</string>
 	
 	<string name="title_bab">"Bab "</string>
 	<string name="title_doa"> "Doa"</string>
 	<string name="title_hadist"> "Hadist"</string>
 	<string name="title_riwayat"> "Riwayat"</string>
 	<string name="title_halaman"> "Page"</string>
 	<string name="title_arti"> "Meaning"</string>
 	<string name="title_keterangan"> "Explanation"</string>
 	
 	<string name="prakata"> "Prakata :"</string>
 	<string name="help"> "Help Me"</string>
 	<string name="kritk_saran"> "Apabila ada kritik dan saran, mohon kirimkan kritik dan saran anda melalui alamat email wachid.sst@gmail.com"</string>
 	<string name="about_homework"> "Alhamdulillahirobbil alamin, segala puji bagi allah yang telah memberikan kesempatan untuk membuat aplikasi ini, apabila ada kritik dan saran, mohon kirimkan kritik dan saran anda melalui alamat email wachid.sst@gmail.com"</string>
 	<string name="tahun">2014</string>
 	<string name="All_right">All rights reserved</string>
 	<string name="muhtar_daawat">Muhtar Daawat</string>
 	<string name="version">Version 1.1</string>
 	<string name="muhtar_image">Muhtar Daawat</string>
 	


</resources>
